# Diploma

./: .gitignore  Dockerfile  ENDPOINTS.md  README.md  docker-compose.yml  go.mod  go.sum
.github/workflows/: ci_branch.yaml
Learning CV/agent/: Dockerfile  config.yaml  pyproject.toml
Learning CV/agent/src/docscan/: __init__.py  api.py  cli.py  config.py  extraction.py  inventory.py
actions/: 00_types_actions.md  01_create_object.md  02_introduction_of_the_schedule.md  03_marking_of_completed_work.md  04_incoming_materials.md  05_comments_from_the_cunstruction.md  06_inspector_violation.md  07_laboratory_sampling.md
backend/: Dockerfile
cmd/server/: main.go
documentation/actions/: 08_offline_input.md
documentation/entities/: 00_types_entities.md
entities/: 01_entities_user.md  02_entities_object.md  03_entities_work.md  04_entities_material.md  05_entities_remark.md  06_entities_violation_and_prescription.md
frontend/: .dockerignore  .gitignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue  frappe-gantt.d.ts  main.ts
internal/admin/: handlers.go
internal/auth/: force_change_password.go  handlers.go  middleware.go
internal/config/: config.go
internal/customer/: handlers.go
internal/cv/: service.go
internal/db/: db.go
k8s/: backend-deployment.yaml  configmap.yaml  cv-agent-deployment.yaml  frontend-deployment.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  pv.yaml  pvc.yaml  secret.yaml  services.yaml
migrations/: 001_create_users.sql  002_create_material_deliveries_and_documents.sql
(+76 files in other folders)
